--- a/workshopA_2022.Rmd
+++ b/workshopA_2022.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'BM424 workshop: infectious disease outbreak control'
 author: "Morgan Feeney"
-date: "06/12/2022"
+date: "24/02/2023"
 output: 
   bookdown::html_document2:
     toc: true
@@ -45,7 +45,7 @@ You must work together, using the information that has been provided for you in 
 
 Your action points may include directives to gather more information (e.g., contact tracing of current cases, microbiological testing of food/water, etc.), or specific directives (e.g. public health measures, non-pharmaceutical interventions, etc.). Use the data/expertise of all group members. Be clear, concise, and specific.
 
-You should submit 3-5 specific actions to control the pandemic, using the workshop 3 pro forma (available on MyPlace). Submit this by noon, Friday March 10th, via the submission link on MyPlace. 
+You should submit 3-5 specific actions to control the pandemic, using the [workshop 3 pro forma](/proformas/BM424_workshop3_proforma.docx) (also available on MyPlace). Submit this by noon, Friday March 10th, via the submission link on MyPlace. 
 
 ***
 
@@ -232,7 +232,20 @@ I have just learned that my `r sample(rel1, 1)` has passed away due to the new p
 
 ***
 
-As Provost of `r city_name`, you are of course familiar with the work of the [Standing Committee on Pandemic Preparedness](https://www.gov.scot/groups/standing-committee-on-pandemic-preparedness/), the [UK Pandemic Preparedness plan](https://www.gov.uk/government/publications/uk-pandemic-preparedness/uk-pandemic-preparedness), and the latest [COVID-19 health protection guidance](https://publichealthscotland.scot/our-areas-of-work/conditions-and-diseases/covid-19/covid-19-health-protection-guidance/#section-1) released by Public Health Scotland. 
+
+As Provost of `r city_name`, you are of course familiar with the work of the [Standing Committee on Pandemic Preparedness](https://www.gov.scot/groups/standing-committee-on-pandemic-preparedness/). You are also familiar with:
+
+* The [UK Pandemic Preparedness plan](https://www.gov.uk/government/publications/uk-pandemic-preparedness/uk-pandemic-preparedness)
+
+* The latest [COVID-19 health protection guidance](https://publichealthscotland.scot/our-areas-of-work/conditions-and-diseases/covid-19/covid-19-health-protection-guidance/#section-1) released by Public Health Scotland
+
+* [Tackling antimicrobial resistance 2019–2024: The UK’s five-year national action plan](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1070263/UK_AMR_5_year_national_action_plan.pdf)
+
+* The [UK One Health Report - Joint report on antibiotic use and antibiotic resistance, 2013–2017 ](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/921039/Ted_Final_version__1318703-v45-One_Health_Report_2019_FINAL-accessible.pdf)
+
+* [Communicating risk in public health emergencies: A WHO guideline for emergency risk communication (ERC) policy and practice](https://apps.who.int/iris/bitstream/handle/10665/259807/9789241550208-eng.pdf?sequence=2&isAllowed=y)
+
+
 
 ***
 
@@ -242,13 +255,13 @@ You are a representative from Public Health Scotland, sent to `r city_name` to h
 
 Your briefing packet includes the following documents: 
 
-[Guideline on the management of Legionella cases, incidents,outbreaks and clusters in the community: Health Protection Network Scottish Guidance](https://hpspubsrepo.blob.core.windows.net/hps-website/nss/2070/documents/1_legionella-guidelines-2014-2.pdf)
+* [Guideline on the management of <i>Legionella</i> cases, incidents,outbreaks and clusters in the community: Health Protection Network Scottish Guidance](https://hpspubsrepo.blob.core.windows.net/hps-website/nss/2070/documents/1_legionella-guidelines-2014-2.pdf)
 
-[Cluster of <i>Legionella longbeachae</i> cases in Scotland in September/October 2013: Report from a national Incident Management Team](https://hpspubsrepo.blob.core.windows.net/hps-website/nss/1918/documents/1_legionella-outbreak-report-2014.pdf)
+* [Cluster of <i>Legionella longbeachae</i> cases in Scotland in September/October 2013: Report from a national Incident Management Team](https://hpspubsrepo.blob.core.windows.net/hps-website/nss/1918/documents/1_legionella-outbreak-report-2014.pdf)
 
-Kawasaki, Takeshi et al. “Diagnostic accuracy of urinary antigen tests for legionellosis: A systematic review and meta-analysis.” Respiratory investigation vol. 60,2 (2022): 205-214. 
+* Kawasaki, Takeshi et al. “Diagnostic accuracy of urinary antigen tests for legionellosis: A systematic review and meta-analysis.” Respiratory investigation vol. 60,2 (2022): 205-214. 
 
-Nisar, Muhammad Atif et al. “Legionella pneumophila and Protozoan Hosts: Implications for the Control of Hospital and Potable Water Systems.” Pathogens (Basel, Switzerland) vol. 9,4 286. 15 Apr. 2020, 
+* Nisar, Muhammad Atif et al. “<i>Legionella pneumophila</i> and Protozoan Hosts: Implications for the Control of Hospital and Potable Water Systems.” Pathogens (Basel, Switzerland) vol. 9,4 286. 15 Apr. 2020, 
 
 ***
 
@@ -308,9 +321,14 @@ A team of scientists working together have cultured <i>Legionella pneumophila</i
 <br><br>
 Your briefing packet also includes the following documents: 
 
-Gorzynski, Jamie et al. “Epidemiological analysis of Legionnaires' disease in Scotland: a genomic study.” The Lancet. Microbe vol. 3,11 (2022): e835-e845. 
+* Gorzynski, Jamie et al. “Epidemiological analysis of Legionnaires' disease in Scotland: a genomic study.” The Lancet. Microbe vol. 3,11 (2022): e835-e845. 
 
-Cameron, R L et al. “Comparison of Legionella longbeachae and Legionella pneumophila cases in Scotland; implications for diagnosis, treatment and public health response.” Journal of medical microbiology vol. 65,2 (2016): 142-146.
+* Cameron, R L et al. “Comparison of <i>Legionella longbeachae</i> and <i>Legionella pneumophila</i> cases in Scotland; implications for diagnosis, treatment and public health response.” Journal of medical microbiology vol. 65,2 (2016): 142-146.
+
+* Khodr, A et al. “Molecular epidemiology, phylogeny and evolution of Legionella.” Infection, genetics and evolution : journal of molecular epidemiology and evolutionary genetics in infectious diseases vol. 43 (2016): 108-22. doi:10.1016/j.meegid.2016.04.033
+
+* Buultjens, Andrew H et al. “A Supervised Statistical Learning Approach for Accurate Legionella pneumophila Source Attribution during Outbreaks.” Applied and environmental microbiology vol. 83,21 e01482-17. 17 Oct. 2017, doi:10.1128/AEM.01482-17
+
 
 ***
 
@@ -340,7 +358,7 @@ ggplot(expenses, aes(x="", y=value, fill=Category)) +
 
 The `r hospital_name` has units specialising in coronary care; maternity care; paediatic care; an ear, nose, and throat clinic; an eye clinic; and an orthopedic unit.
 
-There are currently 25 ICU beds (with ventilators) available, an increase from the 17 ICU beds in the `r hospital_name` in September 2019. Average ICU bed occupancy before and during the COVID-19 pandemic is in Figure x. 
+There are currently 25 ICU beds (with ventilators) available, an increase from the 17 ICU beds in the `r hospital_name` in September 2019. Average ICU bed occupancy before and during the COVID-19 pandemic is in Figure 8. 
 
 
 ```{r A6, fig.cap="ICU bed occupancy for the Inverkeld Queen Rose hospital (Source: NHS Scotland)", echo=FALSE}
@@ -421,11 +439,11 @@ The hospital follows the guidelines set out in the [National Infection Preventio
 
 As a hospital director, you are familiar with the literature surrounding hospital pandemic preparedness, and regularly read papers such as:
 
-Mer, Mervyn et al. “Critical Care Pandemic Preparation: Considerations and Lessons Learned from COVID-19.” Critical care clinics vol. 38,4 (2022): 761-774. 
+* Mer, Mervyn et al. “Critical Care Pandemic Preparation: Considerations and Lessons Learned from COVID-19.” Critical care clinics vol. 38,4 (2022): 761-774. 
 
-Tacconelli, Evelina et al. “Challenges of data sharing in European Covid-19 projects: A learning opportunity for advancing pandemic preparedness and response.” The Lancet regional health. Europe vol. 21 (2022): 100467. 
+* Tacconelli, Evelina et al. “Challenges of data sharing in European Covid-19 projects: A learning opportunity for advancing pandemic preparedness and response.” The Lancet regional health. Europe vol. 21 (2022): 100467. 
 
-Adelaja, I., Sayma, M., Walton, H., McLachlan, G., de Boisanger, J., Bartlett-Pestell, S., Roche, E., Gandhi, V., Wilson, G. J., Brookes, Z., Yeen Fung, C., Macfarlane, H., Navaratnam, A., James, C., Scolding, P., & Sara, H. (2020). A comprehensive hospital agile preparedness (CHAPs) tool for pandemic preparedness, based on the COVID-19 experience. Future healthcare journal, 7(2), 165–168. 
+* Adelaja, I., Sayma, M., Walton, H., McLachlan, G., de Boisanger, J., Bartlett-Pestell, S., Roche, E., Gandhi, V., Wilson, G. J., Brookes, Z., Yeen Fung, C., Macfarlane, H., Navaratnam, A., James, C., Scolding, P., & Sara, H. (2020). A comprehensive hospital agile preparedness (CHAPs) tool for pandemic preparedness, based on the COVID-19 experience. Future healthcare journal, 7(2), 165–168. 
 
 ***
 
@@ -443,11 +461,11 @@ Some of the key `r city_name` facts and figures at a glance are summarized in th
   </tr>
   <tr>
     <td>Schools</td>
-    <td>3 primary schools, 1 secondary school, 1 college</td>
+    <td>`r sample(4:10, size=1)` primary schools, `r sample(2:6, size=1)` secondary schools, 1 college</td>
   </tr>
   <tr>
     <td>Care Homes</td>
-    <td>2, each with ~50 bed capacity</td>
+    <td>`r sample(2:6, size=1)`, each with ~50 bed capacity</td>
   </tr>
   <tr>
     <td>Restaurants and Cafes</td>
@@ -497,31 +515,33 @@ ggplot(water, aes(x="", y=value, fill=Category)) +
 
 Your briefing packet on Legionnaires' Disease includes the following information.
 
-[Legionnaires’ Disease: Use water management programs in buildings to help prevent outbreaks](https://www.cdc.gov/vitalsigns/pdf/2016-06-vitalsigns.pdf) CDC fact-sheet.
+* [Legionnaires’ Disease: Use water management programs in buildings to help prevent outbreaks](https://www.cdc.gov/vitalsigns/pdf/2016-06-vitalsigns.pdf) CDC fact-sheet.
 
-Currie, S L et al. “Legionella spp. in UK composts--a potential public health issue?.” Clinical microbiology and infection : the official publication of the European Society of Clinical Microbiology and Infectious Diseases vol. 20,4 (2014): O224-9. 
+* Currie, S L et al. “<i>Legionella</i> spp. in UK composts--a potential public health issue?.” Clinical microbiology and infection : the official publication of the European Society of Clinical Microbiology and Infectious Diseases vol. 20,4 (2014): O224-9. 
 
-McCormick, D et al. “Public health response to an outbreak of Legionnaires' disease in Edinburgh, United Kingdom, June 2012.” Euro surveillance : bulletin Europeen sur les maladies transmissibles = European communicable disease bulletin vol. 17,28 20216. 12 Jul. 2012, doi:10.2807/ese.17.28.20216-en
+* McCormick, D et al. “Public health response to an outbreak of Legionnaires' disease in Edinburgh, United Kingdom, June 2012.” Euro surveillance : bulletin Europeen sur les maladies transmissibles = European communicable disease bulletin vol. 17,28 20216. 12 Jul. 2012, doi:10.2807/ese.17.28.20216-en
 
-Hyland, J M et al. “Outbreak of Legionnaires' disease in West Fife: review of environmental guidelines needed.” Public health vol. 122,1 (2008): 79-83.
+* Hyland, J M et al. “Outbreak of Legionnaires' disease in West Fife: review of environmental guidelines needed.” Public health vol. 122,1 (2008): 79-83.
 
 ***
 
 ## Information Packet A6
 
-You are a microbiologist working in the bacteriology department at the Greater `r city_name` Clinical Laboratory. Your laboratory is equipped to handle a range of culture samples (including anaerobic and microaerobic organisms), and you routinely process`r sample(1500:2000, size=1)` samples monthly. 
+You are a microbiologist working in the bacteriology department at the Greater `r city_name` Clinical Laboratory. Your laboratory is equipped to handle a range of culture samples (including anaerobic and microaerobic organisms), and you routinely process `r sample(1500:2000, size=1)` samples monthly. 
 
-You are familiar with the culture requirements for growth of <i>Legionella pneumophila</i>, and the UK SMI for <i>Legionella</i> identification (see documents below).
+You are familiar with the culture requirements for growth of <i>Legionella pneumophila</i>, and [UK Standards for Microbiology Investigations (UK SMI): Identification of <i>Legionella</i> species](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/422702/ID_18i3.pdf).
 
 ```{r Legionella-agar, out.width="50%", out.height="50%", echo=FALSE, fig.cap="Legionella grown on BCYE agar. Image credit: [CDC](https://www.cdc.gov/legionella/resources/materials.html)"}
 knitr::include_graphics(rep("images/Legionella-BCYE.jpg"))
 ```
 
-[UK SMI: Identification of <i>Legionella</i> species](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/422702/ID_18i3.pdf)
+You are also familiar with the literature surrounding <i>Legionella</i> identification, and often read papers such as:
 
-Benitez, Alvaro J, and Jonas M Winchell. “Clinical application of a multiplex real-time PCR assay for simultaneous detection of Legionella species, Legionella pneumophila, and Legionella pneumophila serogroup 1.” Journal of clinical microbiology vol. 51,1 (2013): 348-51. 
+* [CDC guidance on processing environmental samples](https://www.cdc.gov/legionella/labs/procedures-manual.html)
 
-[CDC guidance on processing environmental samples](https://www.cdc.gov/legionella/labs/procedures-manual.html)
+* Benitez, Alvaro J, and Jonas M Winchell. “Clinical application of a multiplex real-time PCR assay for simultaneous detection of <i>Legionella</i> species, <i>Legionella pneumophila</i>, and <i>Legionella pneumophila</i> serogroup 1.” Journal of clinical microbiology vol. 51,1 (2013): 348-51. 
+
+* Pascale, Maria Rosaria et al. “Use of Fourier-Transform Infrared Spectroscopy With IR Biotyper® System for Legionella pneumophila Serogroups Identification.” Frontiers in microbiology vol. 13 866426. 26 Apr. 2022, doi:10.3389/fmicb.2022.866426
 
 ***
 
@@ -531,21 +551,21 @@ You are a public communications expert, often employed by the `r city_name` city
 
 As a public communications expert, you are familiar with the literature surrounding science communication in a pandemic, including papers such as: 
 
-Matta, G. Science communication as a preventative tool in the COVID19 pandemic. Humanit Soc Sci Commun 7, 159 (2020).
+* Matta, G. Science communication as a preventative tool in the COVID19 pandemic. Humanit Soc Sci Commun 7, 159 (2020).
 
-Abdool Karim, Salim S. “Public understanding of science: Communicating in the midst of a pandemic.” Public understanding of science (Bristol, England) vol. 31,3 (2022): 282-287.
+* Abdool Karim, Salim S. “Public understanding of science: Communicating in the midst of a pandemic.” Public understanding of science (Bristol, England) vol. 31,3 (2022): 282-287.
 
-Royan, Regina et al. “Use of Twitter Amplifiers by Medical Professionals to Combat Misinformation During the COVID-19 Pandemic.” Journal of medical Internet research vol. 24,7 e38324. 22 Jul. 2022, doi:10.2196/38324
+* Royan, Regina et al. “Use of Twitter Amplifiers by Medical Professionals to Combat Misinformation During the COVID-19 Pandemic.” Journal of medical Internet research vol. 24,7 e38324. 22 Jul. 2022, doi:10.2196/38324
 
-Tait, Margaret E et al. “Serving the public? A content analysis of COVID-19 public service announcements airing from March - December of 2020 in the U.S.” Preventive medicine reports vol. 29 (2022): 101971. 
+* Tait, Margaret E et al. “Serving the public? A content analysis of COVID-19 public service announcements airing from March - December of 2020 in the U.S.” Preventive medicine reports vol. 29 (2022): 101971. 
 
 You have assembled the following information/resources for this meeting:
 
-[CDC Legionella Communications Resources](https://www.cdc.gov/legionella/health-depts/communications-resources.html)
+* [CDC <i>Legionella</i> Communications Resources](https://www.cdc.gov/legionella/health-depts/communications-resources.html)
 
-[Legionnaires' disease outbreak investigation toolbox: Developing Communications](https://legionnaires.ecdc.europa.eu/?pid=600)
+* [Legionnaires' disease outbreak investigation toolbox: Developing Communications](https://legionnaires.ecdc.europa.eu/?pid=600)
 
-[Legionella awareness campaign highlights deadly legionella hotspots](https://hydrochemgroup.co.uk/2021/09/22/legionella-awareness-campaign-highlights-deadly-legionella-hotspots/)
+* [<i>Legionella</i> awareness campaign highlights deadly <i>Legionella</i> hotspots](https://hydrochemgroup.co.uk/2021/09/22/legionella-awareness-campaign-highlights-deadly-legionella-hotspots/)
 
 ***
 
@@ -553,19 +573,19 @@ You have assembled the following information/resources for this meeting:
 
 You are one of the doctors at the largest surgery in `r city_name`. In the past fortnight, `r sample(15:50, size=1)` of your patients have recently presented to the surgery with symptoms consistent with Legionnaire's disease. You have therefore recently been familiarising yourself with the relevant literature:
 
-[Clinician Factsheet: Legionnaire's Disease](https://www.cdc.gov/legionella/downloads/fs-legionella-clinicians.pdf)
-
+* [Clinician Factsheet: Legionnaire's Disease](https://www.cdc.gov/legionella/downloads/fs-legionella-clinicians.pdf)
+* 
 [Clinical features of Legionnaire's Disease and Pontiac Fever](https://www.cdc.gov/legionella/clinicians/clinical-features.html)
 
-[Diagnosis, Treatment, and Prevention - CDC guidelines](https://www.cdc.gov/legionella/clinicians/diagnostic-testing.html)
+* [Diagnosis, Treatment, and Prevention - CDC guidelines](https://www.cdc.gov/legionella/clinicians/diagnostic-testing.html)
 
-[National Enhanced Legionella Surveillance Scotland](https://publichealthscotland.scot/media/8072/2021-01-surveillance-form-legionella.pdf)
+* [National Enhanced <i>Legionella</i> Surveillance Scotland](https://publichealthscotland.scot/media/8072/2021-01-surveillance-form-legionella.pdf)
 
-Mandell, Lionel A et al. “Infectious Diseases Society of America/American Thoracic Society consensus guidelines on the management of community-acquired pneumonia in adults.” Clinical infectious diseases : an official publication of the Infectious Diseases Society of America vol. 44 Suppl 2,Suppl 2 (2007): S27-72. doi:10.1086/511159
+* Mandell, Lionel A et al. “Infectious Diseases Society of America/American Thoracic Society consensus guidelines on the management of community-acquired pneumonia in adults.” Clinical infectious diseases : an official publication of the Infectious Diseases Society of America vol. 44 Suppl 2,Suppl 2 (2007): S27-72. doi:10.1086/511159
 
-Kalil, Andre C et al. “Management of Adults With Hospital-acquired and Ventilator-associated Pneumonia: 2016 Clinical Practice Guidelines by the Infectious Diseases Society of America and the American Thoracic Society.” Clinical infectious diseases : an official publication of the Infectious Diseases Society of America vol. 63,5 (2016): e61-e111. doi:10.1093/cid/ciw353
+* Kalil, Andre C et al. “Management of Adults With Hospital-acquired and Ventilator-associated Pneumonia: 2016 Clinical Practice Guidelines by the Infectious Diseases Society of America and the American Thoracic Society.” Clinical infectious diseases : an official publication of the Infectious Diseases Society of America vol. 63,5 (2016): e61-e111. doi:10.1093/cid/ciw353
 
-Viasus, Diego et al. “Legionnaires' Disease: Update on Diagnosis and Treatment.” Infectious diseases and therapy vol. 11,3 (2022): 973-986. doi:10.1007/s40121-022-00635-7
+* Viasus, Diego et al. “Legionnaires' Disease: Update on Diagnosis and Treatment.” Infectious diseases and therapy vol. 11,3 (2022): 973-986. doi:10.1007/s40121-022-00635-7
 
 
 
