--- a/workshopC_2022.Rmd
+++ b/workshopC_2022.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'BM424 workshop: infectious disease outbreak control'
 author: "Morgan Feeney"
-date: "06/12/2022"
+date: "24/02/2023"
 output: 
   bookdown::html_document2:
     toc: true
@@ -41,11 +41,11 @@ Each member of your group will play one of the following roles as you attempt to
 7.	Public communications expert (past and current sci comm campaigns)
 8.  Doctor at a major surgery in `r city_name`
 
-You must work together, using the information that has been provided for you in the attached information packets, and decide what action(s) should be taken to control the measles outbreak currently plaguing your city, `r city_name`. Your actions should be evidence-based – use the peer-reviewed literature to decide on measures that will stop the pandemic in your scenario.
+You must work together, using the information that has been provided for you in the attached information packets, and decide what action(s) should be taken to control the outbreak currently plaguing your city, `r city_name`. Your actions should be evidence-based – use the peer-reviewed literature to decide on measures that will stop the pandemic in your scenario.
 
 Your action points may include directives to gather more information (e.g., contact tracing of current cases, microbiological testing of food/water, etc.), or specific directives (e.g. public health measures, non-pharmaceutical interventions, etc.). Use the data/expertise of all group members. Be clear, concise, and specific.
 
-You should submit 3-5 specific actions to control the pandemic, using the workshop 3 pro forma (available on MyPlace). Submit this by noon, Friday March 10th, via the submission link on MyPlace. 
+You should submit 3-5 specific actions to control the pandemic, using the [workshop 3 pro forma](/proformas/BM424_workshop3_proforma.docx) (also available on MyPlace). Submit this by noon, Friday March 10th, via the submission link on MyPlace. 
 
 ***
 
@@ -233,7 +233,20 @@ I have just learned that my `r sample(rel1, 1)` has passed away due to the new p
 
 ***
 
-As Provost of `r city_name`, you are of course familiar with the work of the [Standing Committee on Pandemic Preparedness](https://www.gov.scot/groups/standing-committee-on-pandemic-preparedness/), the [UK Pandemic Preparedness plan](https://www.gov.uk/government/publications/uk-pandemic-preparedness/uk-pandemic-preparedness), and the latest [COVID-19 health protection guidance](https://publichealthscotland.scot/our-areas-of-work/conditions-and-diseases/covid-19/covid-19-health-protection-guidance/#section-1) released by Public Health Scotland. 
+
+As Provost of `r city_name`, you are of course familiar with the work of the [Standing Committee on Pandemic Preparedness](https://www.gov.scot/groups/standing-committee-on-pandemic-preparedness/). You are also familiar with:
+
+* The [UK Pandemic Preparedness plan](https://www.gov.uk/government/publications/uk-pandemic-preparedness/uk-pandemic-preparedness)
+
+* The latest [COVID-19 health protection guidance](https://publichealthscotland.scot/our-areas-of-work/conditions-and-diseases/covid-19/covid-19-health-protection-guidance/#section-1) released by Public Health Scotland
+
+* [Tackling antimicrobial resistance 2019–2024: The UK’s five-year national action plan](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1070263/UK_AMR_5_year_national_action_plan.pdf)
+
+* The [UK One Health Report - Joint report on antibiotic use and antibiotic resistance, 2013–2017 ](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/921039/Ted_Final_version__1318703-v45-One_Health_Report_2019_FINAL-accessible.pdf)
+
+* [Communicating risk in public health emergencies: A WHO guideline for emergency risk communication (ERC) policy and practice](https://apps.who.int/iris/bitstream/handle/10665/259807/9789241550208-eng.pdf?sequence=2&isAllowed=y)
+
+
 
 ***
 
@@ -243,13 +256,13 @@ You are a representative from Public Health Scotland, sent to `r city_name` to h
 
 Your briefing packet includes the following documents: 
 
-[Staphylococcus aureus bacteraemia (NHS)](https://www.nss.nhs.scot/antimicrobial-resistance-and-healthcare-associated-infection/data-and-intelligence/staphylococcus-aureus-bacteraemia/)
+* [Staphylococcus aureus bacteraemia (NHS)](https://www.nss.nhs.scot/antimicrobial-resistance-and-healthcare-associated-infection/data-and-intelligence/staphylococcus-aureus-bacteraemia/)
 
-[<i>Staphylococcus aureus</i> epidemiology (UKHSA)](https://www.gov.uk/government/collections/staphylococcus-aureus-guidance-data-and-analysis#epidemiology)
+* [<i>Staphylococcus aureus</i> epidemiology (UKHSA)](https://www.gov.uk/government/collections/staphylococcus-aureus-guidance-data-and-analysis#epidemiology)
 
-Tong SY, Davis JS, Eichenberger E, Holland TL, Fowler VG Jr. Staphylococcus aureus infections: epidemiology, pathophysiology, clinical manifestations, and management. Clin Microbiol Rev. 2015 Jul;28(3):603-61.
+* Tong SY, Davis JS, Eichenberger E, Holland TL, Fowler VG Jr. Staphylococcus aureus infections: epidemiology, pathophysiology, clinical manifestations, and management. Clin Microbiol Rev. 2015 Jul;28(3):603-61.
 
-Lawes T, Edwards B, López-Lozano JM, Gould I. Trends in Staphylococcus aureus bacteraemia and impacts of infection control practices including universal MRSA admission screening in a hospital in Scotland, 2006-2010: retrospective cohort study and time-series intervention analysis. BMJ Open. 2012 Jun 8;2(3):e000797. 
+* Lawes T, Edwards B, López-Lozano JM, Gould I. Trends in Staphylococcus aureus bacteraemia and impacts of infection control practices including universal MRSA admission screening in a hospital in Scotland, 2006-2010: retrospective cohort study and time-series intervention analysis. BMJ Open. 2012 Jun 8;2(3):e000797. 
 
 
 
@@ -311,9 +324,13 @@ A team of scientists working together have in a PHS lab have isolated and cultur
 <br><br>
 Your briefing packet also includes the following documents: 
 
-[<i>Staphylococcus aureus</i> pubMLST](https://pubmlst.org/organisms/staphylococcus-aureus) 
+* [<i>Staphylococcus aureus</i> pubMLST](https://pubmlst.org/organisms/staphylococcus-aureus) 
 
-Reuter, Sandra et al. “Building a genomic framework for prospective MRSA surveillance in the United Kingdom and the Republic of Ireland.” Genome research vol. 26,2 (2016): 263-70. 
+* Reuter, Sandra et al. “Building a genomic framework for prospective MRSA surveillance in the United Kingdom and the Republic of Ireland.” Genome research vol. 26,2 (2016): 263-70. 
+
+* Mollerup, Sarah et al. “<i>spa</i> Typing of Methicillin-Resistant <i>Staphylococcus aureus</i> Based on Whole-Genome Sequencing: the Impact of the Assembler.” Microbiology spectrum vol. 10,6 (2022): e0218922. doi:10.1128/spectrum.02189-22
+
+* Cunningham, Scott A et al. “Comparison of Whole-Genome Sequencing Methods for Analysis of Three Methicillin-Resistant Staphylococcus aureus Outbreaks.” Journal of clinical microbiology vol. 55,6 (2017): 1946-1953. doi:10.1128/JCM.00029-17
 
 ***
 
@@ -425,11 +442,11 @@ The hospital follows the guidelines set out in the [National Infection Preventio
 
 As a hospital director, you are familiar with the literature surrounding hospital pandemic preparedness, and regularly read papers such as:
 
-Mer, Mervyn et al. “Critical Care Pandemic Preparation: Considerations and Lessons Learned from COVID-19.” Critical care clinics vol. 38,4 (2022): 761-774. 
+* Mer, Mervyn et al. “Critical Care Pandemic Preparation: Considerations and Lessons Learned from COVID-19.” Critical care clinics vol. 38,4 (2022): 761-774. 
 
-Tacconelli, Evelina et al. “Challenges of data sharing in European Covid-19 projects: A learning opportunity for advancing pandemic preparedness and response.” The Lancet regional health. Europe vol. 21 (2022): 100467. 
+* Tacconelli, Evelina et al. “Challenges of data sharing in European Covid-19 projects: A learning opportunity for advancing pandemic preparedness and response.” The Lancet regional health. Europe vol. 21 (2022): 100467. 
 
-Adelaja, I., Sayma, M., Walton, H., McLachlan, G., de Boisanger, J., Bartlett-Pestell, S., Roche, E., Gandhi, V., Wilson, G. J., Brookes, Z., Yeen Fung, C., Macfarlane, H., Navaratnam, A., James, C., Scolding, P., & Sara, H. (2020). A comprehensive hospital agile preparedness (CHAPs) tool for pandemic preparedness, based on the COVID-19 experience. Future healthcare journal, 7(2), 165–168. 
+* Adelaja, I., Sayma, M., Walton, H., McLachlan, G., de Boisanger, J., Bartlett-Pestell, S., Roche, E., Gandhi, V., Wilson, G. J., Brookes, Z., Yeen Fung, C., Macfarlane, H., Navaratnam, A., James, C., Scolding, P., & Sara, H. (2020). A comprehensive hospital agile preparedness (CHAPs) tool for pandemic preparedness, based on the COVID-19 experience. Future healthcare journal, 7(2), 165–168. 
 
 ***
 
@@ -487,13 +504,13 @@ Some of the key `r city_name` facts and figures at a glance are summarized in th
 
 Your briefing packet on MRSA includes the following information.
 
-[Prevention and control of infection in care homes – an information resource (Health Protection Agency)](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/214929/Care-home-resource-18-February-2013.pdf)
+* [Prevention and control of infection in care homes – an information resource (Health Protection Agency)](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/214929/Care-home-resource-18-February-2013.pdf)
 
-[Health protection in children and young people settings, including education](https://www.gov.uk/government/publications/health-protection-in-schools-and-other-childcare-facilities)
+* [Health protection in children and young people settings, including education](https://www.gov.uk/government/publications/health-protection-in-schools-and-other-childcare-facilities)
 
-[Infection control in the built environment](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/148493/HFN_30_-_Infection_control.pdf)
+* [Infection control in the built environment](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/148493/HFN_30_-_Infection_control.pdf)
 
-[MRSA guidelines (Healthcare Infection Society)](https://www.his.org.uk/resources-guidelines/mrsa-guidelines/)
+* [MRSA guidelines (Healthcare Infection Society)](https://www.his.org.uk/resources-guidelines/mrsa-guidelines/)
 
 ***
 
@@ -501,17 +518,19 @@ Your briefing packet on MRSA includes the following information.
 
 You are a microbiologist working in the virology department at the Greater `r city_name` Clinical Laboratory. Your laboratory is equipped to handle a range of culture samples (including anaerobic and microaerobic bacteria, as well as viruses), and you routinely process`r sample(1500:2000, size=1)` samples monthly. 
 
-You are familiar with the culture requirements for growth of MRSA in the laboratory, and the [ UK Standards for Microbiology Investigations (SMI) for identification of Staphylococcus](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/887570/UK_SMI_ID_07i4.pdf).
+You are familiar with the culture requirements for growth of MRSA in the laboratory, and the [UK Standards for Microbiology Investigations (SMI) for identification of Staphylococcus](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/887570/UK_SMI_ID_07i4.pdf).
 
 ```{r MRSA-MSA, echo=FALSE, out.width="50%", out.height="50%", echo=FALSE, fig.cap="MRSA grown on Mannitol Salt Agar (MSA). Image credit: [CDC](https://phil.cdc.gov/Details.aspx?pid=16810)"}
 knitr::include_graphics(rep("images/MRSA-MSA.jpg"))
 ```
 
-[Methicillin-resistant <i>Staphylococcus aureus</i> (MRSA): Laboratory esting (CDC)](https://www.cdc.gov/mrsa/lab/index.html)
+You are also familiar with the literature surrounding <i>Staphylococcus aureus</i> identification, and often read papers such as:
 
-Hunt AC, Edwards B, Girvan EK, Cosgrove B, Edwards GF, Gould IM. Methicillin-resistant Staphylococcus aureus in Northeastern Scotland in 2003 to 2007: evolving strain distribution and resistance patterns. J Clin Microbiol. 2011 May;49(5):1975-8. 
+* [Methicillin-resistant <i>Staphylococcus aureus</i> (MRSA): Laboratory Testing (CDC)](https://www.cdc.gov/mrsa/lab/index.html)
 
-Giulieri SG, Tong SYC, Williamson DA. Using genomics to understand meticillin- and vancomycin-resistant Staphylococcus aureus infections. Microb Genom. 2020 Jan;6(1):e000324. 
+* Hunt AC, Edwards B, Girvan EK, Cosgrove B, Edwards GF, Gould IM. Methicillin-resistant Staphylococcus aureus in Northeastern Scotland in 2003 to 2007: evolving strain distribution and resistance patterns. J Clin Microbiol. 2011 May;49(5):1975-8. 
+
+* Giulieri SG, Tong SYC, Williamson DA. Using genomics to understand meticillin- and vancomycin-resistant Staphylococcus aureus infections. Microb Genom. 2020 Jan;6(1):e000324. 
 
 ***
 
@@ -521,21 +540,21 @@ You are a public communications expert, often employed by the `r city_name` city
 
 As a public communications expert, you are familiar with the literature surrounding science communication in a pandemic, including papers such as: 
 
-Matta, G. Science communication as a preventative tool in the COVID19 pandemic. Humanit Soc Sci Commun 7, 159 (2020).
+* Matta, G. Science communication as a preventative tool in the COVID19 pandemic. Humanit Soc Sci Commun 7, 159 (2020).
 
-Abdool Karim, Salim S. “Public understanding of science: Communicating in the midst of a pandemic.” Public understanding of science (Bristol, England) vol. 31,3 (2022): 282-287.
+* Abdool Karim, Salim S. “Public understanding of science: Communicating in the midst of a pandemic.” Public understanding of science (Bristol, England) vol. 31,3 (2022): 282-287.
 
-Royan, Regina et al. “Use of Twitter Amplifiers by Medical Professionals to Combat Misinformation During the COVID-19 Pandemic.” Journal of medical Internet research vol. 24,7 e38324. 22 Jul. 2022, doi:10.2196/38324
+* Royan, Regina et al. “Use of Twitter Amplifiers by Medical Professionals to Combat Misinformation During the COVID-19 Pandemic.” Journal of medical Internet research vol. 24,7 e38324. 22 Jul. 2022, doi:10.2196/38324
 
-Tait, Margaret E et al. “Serving the public? A content analysis of COVID-19 public service announcements airing from March - December of 2020 in the U.S.” Preventive medicine reports vol. 29 (2022): 101971. 
+* Tait, Margaret E et al. “Serving the public? A content analysis of COVID-19 public service announcements airing from March - December of 2020 in the U.S.” Preventive medicine reports vol. 29 (2022): 101971. 
 
 You have assembled the following information/resources for this meeting:
 
-Dickmann P, Keeping S, Döring N, Schmidt AE, Binder C, Ariño-Blasco S, Gil J. Communicating the Risk of MRSA: The Role of Clinical Practice, Regulation and Other Policies in Five European Countries. Front Public Health. 2017 Mar 17;5:44. 
+* Dickmann P, Keeping S, Döring N, Schmidt AE, Binder C, Ariño-Blasco S, Gil J. Communicating the Risk of MRSA: The Role of Clinical Practice, Regulation and Other Policies in Five European Countries. Front Public Health. 2017 Mar 17;5:44. 
 
-Mason, Thuy et al. “Knowledge and awareness of the general public and perception of pharmacists about antibiotic resistance.” BMC public health vol. 18,1 711. 8 Jun. 2018.
+* Mason, Thuy et al. “Knowledge and awareness of the general public and perception of pharmacists about antibiotic resistance.” BMC public health vol. 18,1 711. 8 Jun. 2018.
 
-Djerf-Pierre, Monika, and Mia Lindgren. “Making sense of "superbugs" on YouTube: A storytelling approach.” Public understanding of science (Bristol, England) vol. 30,5 (2021): 535-551.
+* Djerf-Pierre, Monika, and Mia Lindgren. “Making sense of "superbugs" on YouTube: A storytelling approach.” Public understanding of science (Bristol, England) vol. 30,5 (2021): 535-551.
 
 
 
@@ -546,17 +565,17 @@ Djerf-Pierre, Monika, and Mia Lindgren. “Making sense of "superbugs" on YouTub
 You are one of the doctors at the largest surgery in `r city_name`. In the past fortnight, `r sample(50:100, size=1)` of your patients have recently presented to the surgery with symptoms consistent with MRSA. You have therefore recently been familiarising yourself with the relevant literature:
 
 
-[Guidance on the diagnosis and management of PVL-associated <i>Staphylococcus aureus</i> infections (PVL-SA) in England](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/322857/Guidance_on_the_diagnosis_and_management_of_PVL_associated_SA_infections_in_England_2_Ed.pdf)
+* [Guidance on the diagnosis and management of PVL-associated <i>Staphylococcus aureus</i> infections (PVL-SA) in England](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/322857/Guidance_on_the_diagnosis_and_management_of_PVL_associated_SA_infections_in_England_2_Ed.pdf)
 
-[Scottish One Health Antimicrobial Use and Antimicrobial Resistance in 2021](https://www.nss.nhs.scot/publications/scottish-one-health-antimicrobial-use-and-antimicrobial-resistance-in-2021/)
+* [Scottish One Health Antimicrobial Use and Antimicrobial Resistance in 2021](https://www.nss.nhs.scot/publications/scottish-one-health-antimicrobial-use-and-antimicrobial-resistance-in-2021/)
 
-[MRSA Standard Operating Procedure (SOP)(NHSGGC)](https://www.nhsggc.scot/downloads/mrsa-sop-august-2022/?wpdmdl=47439&refresh=63cab74ea7ec71674229582&ind=1668006657031&filename=MRSA-SOP-V8-amended-Nov-22.pdf)
+* [MRSA Standard Operating Procedure (SOP)(NHSGGC)](https://www.nhsggc.scot/downloads/mrsa-sop-august-2022/?wpdmdl=47439&refresh=63cab74ea7ec71674229582&ind=1668006657031&filename=MRSA-SOP-V8-amended-Nov-22.pdf)
 
-[MRSA care checklist (NHSGGC)](https://www.nhsggc.scot/downloads/mrsa-care-checklist/?wpdmdl=56223&refresh=63cab81b342021674229787&ind=1667989330488&filename=MRSA-Checklist-amended-Oct-22.pdf)
+* [MRSA care checklist (NHSGGC)](https://www.nhsggc.scot/downloads/mrsa-care-checklist/?wpdmdl=56223&refresh=63cab81b342021674229787&ind=1667989330488&filename=MRSA-Checklist-amended-Oct-22.pdf)
 
-Turner, Nicholas A et al. “Methicillin-resistant Staphylococcus aureus: an overview of basic and clinical research.” Nature reviews. Microbiology vol. 17,4 (2019): 203-218.
+* Turner, Nicholas A et al. “Methicillin-resistant Staphylococcus aureus: an overview of basic and clinical research.” Nature reviews. Microbiology vol. 17,4 (2019): 203-218.
 
-Brown, Nicholas M et al. “Treatment of methicillin-resistant Staphylococcus aureus (MRSA): updated guidelines from the UK.” JAC-antimicrobial resistance vol. 3,1 dlaa114. 3 Feb. 2021, doi:10.1093/jacamr/dlaa114
+* Brown, Nicholas M et al. “Treatment of methicillin-resistant Staphylococcus aureus (MRSA): updated guidelines from the UK.” JAC-antimicrobial resistance vol. 3,1 dlaa114. 3 Feb. 2021, doi:10.1093/jacamr/dlaa114
 
-Adalbert, Jenna R et al. “Clinical outcomes in patients co-infected with COVID-19 and Staphylococcus aureus: a scoping review.” BMC infectious diseases vol. 21,1 985. 21 Sep. 2021.
+* Adalbert, Jenna R et al. “Clinical outcomes in patients co-infected with COVID-19 and Staphylococcus aureus: a scoping review.” BMC infectious diseases vol. 21,1 985. 21 Sep. 2021.
 
