--- a/workshopD_2022.Rmd
+++ b/workshopD_2022.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'BM424 workshop: infectious disease outbreak control'
 author: "Morgan Feeney"
-date: "06/12/2022"
+date: "24/02/2023"
 output: 
   bookdown::html_document2:
     toc: true
@@ -42,11 +42,11 @@ Each member of your group will play one of the following roles as you attempt to
 8.  Doctor at a major surgery in `r city_name`
 9.  Epidemiologist from the local university, an expert on <i>Campylobacter</i> transmission
 
-You must work together, using the information that has been provided for you in the attached information packets, and decide what action(s) should be taken to control the measles outbreak currently plaguing your city, `r city_name`. Your actions should be evidence-based – use the peer-reviewed literature to decide on measures that will stop the pandemic in your scenario.
+You must work together, using the information that has been provided for you in the attached information packets, and decide what action(s) should be taken to control the outbreak currently plaguing your city, `r city_name`. Your actions should be evidence-based – use the peer-reviewed literature to decide on measures that will stop the pandemic in your scenario.
 
 Your action points may include directives to gather more information (e.g., contact tracing of current cases, microbiological testing of food/water, etc.), or specific directives (e.g. public health measures, non-pharmaceutical interventions, etc.). Use the data/expertise of all group members. Be clear, concise, and specific.
 
-You should submit 3-5 specific actions to control the pandemic, using the workshop 3 pro forma (available on MyPlace). Submit this by noon, Friday March 10th, via the submission link on MyPlace. 
+You should submit 3-5 specific actions to control the pandemic, using the [workshop 3 pro forma](/proformas/BM424_workshop3_proforma.docx) (also available on MyPlace). Submit this by noon, Friday March 10th, via the submission link on MyPlace. 
 
 ***
 
@@ -234,7 +234,20 @@ I have just learned that my `r sample(rel1, 1)` has passed away due to the new p
 
 ***
 
-As Provost of `r city_name`, you are of course familiar with the work of the [Standing Committee on Pandemic Preparedness](https://www.gov.scot/groups/standing-committee-on-pandemic-preparedness/), the [UK Pandemic Preparedness plan](https://www.gov.uk/government/publications/uk-pandemic-preparedness/uk-pandemic-preparedness), and the latest [COVID-19 health protection guidance](https://publichealthscotland.scot/our-areas-of-work/conditions-and-diseases/covid-19/covid-19-health-protection-guidance/#section-1) released by Public Health Scotland. 
+
+As Provost of `r city_name`, you are of course familiar with the work of the [Standing Committee on Pandemic Preparedness](https://www.gov.scot/groups/standing-committee-on-pandemic-preparedness/). You are also familiar with:
+
+* The [UK Pandemic Preparedness plan](https://www.gov.uk/government/publications/uk-pandemic-preparedness/uk-pandemic-preparedness)
+
+* The latest [COVID-19 health protection guidance](https://publichealthscotland.scot/our-areas-of-work/conditions-and-diseases/covid-19/covid-19-health-protection-guidance/#section-1) released by Public Health Scotland
+
+* [Tackling antimicrobial resistance 2019–2024: The UK’s five-year national action plan](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1070263/UK_AMR_5_year_national_action_plan.pdf)
+
+* The [UK One Health Report - Joint report on antibiotic use and antibiotic resistance, 2013–2017 ](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/921039/Ted_Final_version__1318703-v45-One_Health_Report_2019_FINAL-accessible.pdf)
+
+* [Communicating risk in public health emergencies: A WHO guideline for emergency risk communication (ERC) policy and practice](https://apps.who.int/iris/bitstream/handle/10665/259807/9789241550208-eng.pdf?sequence=2&isAllowed=y)
+
+ 
 
 ***
 
@@ -244,21 +257,21 @@ You are a representative from Public Health Scotland, sent to `r city_name` to h
 
 Your briefing packet includes the following documents: 
 
-[Campylobacter guidance, data and surveillance (PHS)](https://www.hps.scot.nhs.uk/a-to-z-of-topics/campylobacter/)
+* [Campylobacter guidance, data and surveillance (PHS)](https://www.hps.scot.nhs.uk/a-to-z-of-topics/campylobacter/)
 
-[Campylobacter Food Poisoning (Food Standards Scotland)](https://www.foodstandards.gov.scot/consumers/food-safety/foodborne-illness/campylobacter)
+* [Campylobacter Food Poisoning (Food Standards Scotland)](https://www.foodstandards.gov.scot/consumers/food-safety/foodborne-illness/campylobacter)
 
-[Campylobacter: Estimating the burden of gastrointestinal infection in Scotland using data linkage](https://www.foodstandards.gov.scot/downloads/HPS_-_Campylobacter_Data_Linkage_Report.pdf)
+* [Campylobacter: Estimating the burden of gastrointestinal infection in Scotland using data linkage](https://www.foodstandards.gov.scot/downloads/HPS_-_Campylobacter_Data_Linkage_Report.pdf)
 
-Bessell, Paul R et al. “Geographic determinants of reported human Campylobacter infections in Scotland.” BMC public health vol. 10 423. 15 Jul. 2010, doi:10.1186/1471-2458-10-423
+* Bessell, Paul R et al. “Geographic determinants of reported human Campylobacter infections in Scotland.” BMC public health vol. 10 423. 15 Jul. 2010, doi:10.1186/1471-2458-10-423
 
 ***
 
 ## Information Packet D3
 
-You are an epidemiologist working for Public Health Scotland, sent to `r city_name` to help with the measles outbreak.
+You are an epidemiologist working for Public Health Scotland, sent to `r city_name` to help with the <i>Campylobacter</i> outbreak.
 
-A team of scientists working together have in a PHS lab have isolated and cultured <i>Campylobacter jejuni</i> (following standard procedures) from a number of patient samples taken during this outbreak; isolated <i>Campylobacter jejuni</i> DNA from these cultures; sequenced this DNA using an Illumina MiSeq platform; assembled the short paired-end reads; and compared these assemblies to the extant <i>Campylobacter jejuni</i> sequences available in the NCBI databases. The results of these experiments are summarised in the table below. 
+A team of scientists working together have in a PHS lab have isolated and cultured <i>Campylobacter jejuni</i> (following standard procedures) from a number of patient samples taken during this outbreak; isolated <i>Campylobacter jejuni</i> DNA from these cultures; sequenced this DNA using an Illumina MiSeq platform; assembled the short paired-end reads; and compared these assemblies to the extant <i>Campylobacter jejuni</i> genome sequences available in the NCBI databases. The results of these experiments are summarised in the table below. 
 
 <table>
 <table border="1">
@@ -310,10 +323,13 @@ A team of scientists working together have in a PHS lab have isolated and cultur
 <br><br>
 Your briefing packet also includes the following documents: 
 
-[<i>Campylobacter jejuni/coli</i> pubMLST](https://pubmlst.org/organisms/campylobacter-jejunicoli)
+* [<i>Campylobacter jejuni/coli</i> pubMLST](https://pubmlst.org/organisms/campylobacter-jejunicoli)
 
-Bessell, Paul R et al. “Using sequence data to identify alternative routes and risk of infection: a case-study of campylobacter in Scotland.” BMC infectious diseases vol. 12 80. 1 Apr. 2012, doi:10.1186/1471-2334-12-80
+* Bessell, Paul R et al. “Using sequence data to identify alternative routes and risk of infection: a case-study of campylobacter in Scotland.” BMC infectious diseases vol. 12 80. 1 Apr. 2012, doi:10.1186/1471-2334-12-80
 
+* Llarena, Ann-Katrin et al. “Whole-Genome Sequencing in Epidemiology of Campylobacter jejuni Infections.” Journal of clinical microbiology vol. 55,5 (2017): 1269-1275. doi:10.1128/JCM.00017-17
+
+* Joseph, Lavin A et al. “Comparison of Molecular Subtyping and Antimicrobial Resistance Detection Methods Used in a Large Multistate Outbreak of Extensively Drug-Resistant Campylobacter jejuni Infections Linked to Pet Store Puppies.” Journal of clinical microbiology vol. 58,10 e00771-20. 22 Sep. 2020, doi:10.1128/JCM.00771-20
 
 ***
 
@@ -425,11 +441,11 @@ The hospital follows the guidelines set out in the [National Infection Preventio
 
 As a hospital director, you are familiar with the literature surrounding hospital pandemic preparedness, and regularly read papers such as:
 
-Mer, Mervyn et al. “Critical Care Pandemic Preparation: Considerations and Lessons Learned from COVID-19.” Critical care clinics vol. 38,4 (2022): 761-774. 
+* Mer, Mervyn et al. “Critical Care Pandemic Preparation: Considerations and Lessons Learned from COVID-19.” Critical care clinics vol. 38,4 (2022): 761-774. 
 
-Tacconelli, Evelina et al. “Challenges of data sharing in European Covid-19 projects: A learning opportunity for advancing pandemic preparedness and response.” The Lancet regional health. Europe vol. 21 (2022): 100467. 
+* Tacconelli, Evelina et al. “Challenges of data sharing in European Covid-19 projects: A learning opportunity for advancing pandemic preparedness and response.” The Lancet regional health. Europe vol. 21 (2022): 100467. 
 
-Adelaja, I., Sayma, M., Walton, H., McLachlan, G., de Boisanger, J., Bartlett-Pestell, S., Roche, E., Gandhi, V., Wilson, G. J., Brookes, Z., Yeen Fung, C., Macfarlane, H., Navaratnam, A., James, C., Scolding, P., & Sara, H. (2020). A comprehensive hospital agile preparedness (CHAPs) tool for pandemic preparedness, based on the COVID-19 experience. Future healthcare journal, 7(2), 165–168. 
+* Adelaja, I., Sayma, M., Walton, H., McLachlan, G., de Boisanger, J., Bartlett-Pestell, S., Roche, E., Gandhi, V., Wilson, G. J., Brookes, Z., Yeen Fung, C., Macfarlane, H., Navaratnam, A., James, C., Scolding, P., & Sara, H. (2020). A comprehensive hospital agile preparedness (CHAPs) tool for pandemic preparedness, based on the COVID-19 experience. Future healthcare journal, 7(2), 165–168. 
 
 ***
 
@@ -487,15 +503,15 @@ Some of the key `r city_name` facts and figures at a glance are summarized in th
 
 Your briefing packet on <i>Campylobacter jejuni</i> includes the following information.
 
-[Campylobacter information and guidance (Food standards Scotland)](https://www.foodstandards.gov.scot/downloads/Factsheet_-_Campylobacter_-_Website_-_for_businesses_and_professionals_-_June_2017.pdf)
+* [Campylobacter information and guidance (Food standards Scotland)](https://www.foodstandards.gov.scot/downloads/Factsheet_-_Campylobacter_-_Website_-_for_businesses_and_professionals_-_June_2017.pdf)
 
-[Campylobacter "Fit for Travel" advice](https://www.fitfortravel.nhs.uk/advice/disease-prevention-advice/campylobacter)
+* [Campylobacter "Fit for Travel" advice](https://www.fitfortravel.nhs.uk/advice/disease-prevention-advice/campylobacter)
 
-MacRitchie, L A et al. “Consumer acceptability of interventions to reduce Campylobacter in the poultry food chain.” Food control vol. 35,1 (2014): 260-266. doi:10.1016/j.foodcont.2013.06.005
+* MacRitchie, L A et al. “Consumer acceptability of interventions to reduce <i>Campylobacter</i> in the poultry food chain.” Food control vol. 35,1 (2014): 260-266. doi:10.1016/j.foodcont.2013.06.005
 
-Bessell, Paul R et al. “Geographic determinants of reported human Campylobacter infections in Scotland.” BMC public health vol. 10 423. 15 Jul. 2010, doi:10.1186/1471-2458-10-423
+* Bessell, Paul R et al. “Geographic determinants of reported human <i>Campylobacter</i> infections in Scotland.” BMC public health vol. 10 423. 15 Jul. 2010, doi:10.1186/1471-2458-10-423
 
-Scott, Elizabeth. “Food safety and foodborne disease in 21st century homes.” The Canadian journal of infectious diseases = Journal canadien des maladies infectieuses vol. 14,5 (2003): 277-80.
+* Scott, Elizabeth. “Food safety and foodborne disease in 21st century homes.” The Canadian journal of infectious diseases = Journal canadien des maladies infectieuses vol. 14,5 (2003): 277-80.
 
 ***
 
@@ -509,13 +525,15 @@ You are familiar with the culture requirements for growth of <i>Campylobacter</i
 knitr::include_graphics(rep("images/Campy-plates.jpg"))
 ```
 
-LaGier, Michael J et al. “A real-time multiplexed PCR assay for rapid detection and differentiation of Campylobacter jejuni and Campylobacter coli.” Molecular and cellular probes vol. 18,4 (2004): 275-82.
+You are also familiar with the literature surrounding <i>Campylobacter</i> identification, and often read papers such as:
 
-Ferrari, Sevinc et al. “Validation of PCR methods for confirmation and species identification of thermotolerant Campylobacter as part of EN ISO 10272 - Microbiology of the food chain - Horizontal method for detection and enumeration of Campylobacter spp.” International journal of food microbiology vol. 388 (2023): 110064.
+* LaGier, Michael J et al. “A real-time multiplexed PCR assay for rapid detection and differentiation of <i>Campylobacter jejuni</i> and <i>Campylobacter coli</i>.” Molecular and cellular probes vol. 18,4 (2004): 275-82.
 
-Ojima-Kato, Teruyo et al. “Proteotyping of Campylobacter jejuni by MALDI-TOF MS and Strain Solution Version 2 Software.” Microorganisms vol. 11,1 202. 12 Jan. 2023, doi:10.3390/microorganisms11010202
+* Ferrari, Sevinc et al. “Validation of PCR methods for confirmation and species identification of thermotolerant <i>Campylobacter</i> as part of EN ISO 10272 - Microbiology of the food chain - Horizontal method for detection and enumeration of <i>Campylobacter</i> spp.” International journal of food microbiology vol. 388 (2023): 110064.
 
-Hong, Seung-Hwan et al. “Gold Nanoparticle and Polymerase Chain Reaction (PCR)-Based Colorimetric Assay for the Identification of Campylobacter spp. in Chicken Carcass.” Food science of animal resources vol. 43,1 (2023): 73-84. doi:10.5851/kosfa.2022.e59
+* Ojima-Kato, Teruyo et al. “Proteotyping of <i>Campylobacter jejuni</i> by MALDI-TOF MS and Strain Solution Version 2 Software.” Microorganisms vol. 11,1 202. 12 Jan. 2023, doi:10.3390/microorganisms11010202
+
+* Hong, Seung-Hwan et al. “Gold Nanoparticle and Polymerase Chain Reaction (PCR)-Based Colorimetric Assay for the Identification of <i>Campylobacter</i> spp. in Chicken Carcass.” Food science of animal resources vol. 43,1 (2023): 73-84. doi:10.5851/kosfa.2022.e59
 
 ***
 
@@ -525,21 +543,21 @@ You are a public communications expert, often employed by the `r city_name` city
 
 As a public communications expert, you are familiar with the literature surrounding science communication in a pandemic, including papers such as: 
 
-Matta, G. Science communication as a preventative tool in the COVID19 pandemic. Humanit Soc Sci Commun 7, 159 (2020).
+* Matta, G. Science communication as a preventative tool in the COVID19 pandemic. Humanit Soc Sci Commun 7, 159 (2020).
 
-Abdool Karim, Salim S. “Public understanding of science: Communicating in the midst of a pandemic.” Public understanding of science (Bristol, England) vol. 31,3 (2022): 282-287.
+* Abdool Karim, Salim S. “Public understanding of science: Communicating in the midst of a pandemic.” Public understanding of science (Bristol, England) vol. 31,3 (2022): 282-287.
 
-Royan, Regina et al. “Use of Twitter Amplifiers by Medical Professionals to Combat Misinformation During the COVID-19 Pandemic.” Journal of medical Internet research vol. 24,7 e38324. 22 Jul. 2022, doi:10.2196/38324
+* Royan, Regina et al. “Use of Twitter Amplifiers by Medical Professionals to Combat Misinformation During the COVID-19 Pandemic.” Journal of medical Internet research vol. 24,7 e38324. 22 Jul. 2022, doi:10.2196/38324
 
-Tait, Margaret E et al. “Serving the public? A content analysis of COVID-19 public service announcements airing from March - December of 2020 in the U.S.” Preventive medicine reports vol. 29 (2022): 101971. 
+* Tait, Margaret E et al. “Serving the public? A content analysis of COVID-19 public service announcements airing from March - December of 2020 in the U.S.” Preventive medicine reports vol. 29 (2022): 101971. 
 
 You have assembled the following information/resources for this meeting:
 
-[World Food Safety Day Campaign Materials](https://www.who.int/campaigns/world-food-safety-day/2022/campaign-materials)
+* [World Food Safety Day Campaign Materials](https://www.who.int/campaigns/world-food-safety-day/2022/campaign-materials)
 
-[Campylobacter campaign partner toolkit](https://www.foodstandards.gov.scot/publications-and-research/publications/campylobacter-campaign-partner-toolkit)
+* [Campylobacter campaign partner toolkit](https://www.foodstandards.gov.scot/publications-and-research/publications/campylobacter-campaign-partner-toolkit)
 
-Gölz, Greta et al. “Relevance of Campylobacter to public health--the need for a One Health approach.” International journal of medical microbiology : IJMM vol. 304,7 (2014): 817-23.
+* Gölz, Greta et al. “Relevance of <i>Campylobacter</i> to public health--the need for a One Health approach.” International journal of medical microbiology : IJMM vol. 304,7 (2014): 817-23.
 
 ***
 
@@ -547,19 +565,19 @@ Gölz, Greta et al. “Relevance of Campylobacter to public health--the need for
 
 You are one of the doctors at the largest surgery in `r city_name`. In the past fortnight, `r sample(50:100, size=1)` of your patients have recently presented to the surgery with symptoms consistent with <i>Campylobacter jejuni</i>. You have therefore recently been familiarising yourself with the relevant literature:
 
-[Campylobacter Information for Health Professionals (CDC)](https://www.cdc.gov/campylobacter/technical.html)
+* [Campylobacter Information for Health Professionals (CDC)](https://www.cdc.gov/campylobacter/technical.html)
 
-[BMJ Best Practice - Campylobacter Infection](https://bestpractice.bmj.com/topics/en-gb/1175)
+* [BMJ Best Practice - Campylobacter Infection](https://bestpractice.bmj.com/topics/en-gb/1175)
 
-[NICE Gastroenteritis Background Information](https://cks.nice.org.uk/topics/gastroenteritis/background-information/causes/)
+* [NICE Gastroenteritis Background Information](https://cks.nice.org.uk/topics/gastroenteritis/background-information/causes/)
 
-[NICE Gastroenteritis: Management](https://cks.nice.org.uk/topics/gastroenteritis/management/)
+* [NICE Gastroenteritis: Management](https://cks.nice.org.uk/topics/gastroenteritis/management/)
 
-Tang, Yizhi et al. “Antibiotic resistance trends and mechanisms in the foodborne pathogen, Campylobacter.” Animal health research reviews vol. 18,2 (2017): 87-98.
+* Tang, Yizhi et al. “Antibiotic resistance trends and mechanisms in the foodborne pathogen, <i>Campylobacter</i>.” Animal health research reviews vol. 18,2 (2017): 87-98.
 
-Valenčak-Ignjatić, Ivana et al. “Campylobacter jejuni subdural hygroma infection in a 2-year old boy: case report and a brief literature review.” BMC infectious diseases vol. 22,1 700. 20 Aug. 2022, doi:10.1186/s12879-022-07680-0
+* Valenčak-Ignjatić, Ivana et al. “<i>Campylobacter jejuni</i> subdural hygroma infection in a 2-year old boy: case report and a brief literature review.” BMC infectious diseases vol. 22,1 700. 20 Aug. 2022, doi:10.1186/s12879-022-07680-0
 
-Lévesque, Simon et al. “Campylobacteriosis in urban versus rural areas: a case-case study integrated with molecular typing to validate risk factors and to attribute sources of infection.” PloS one vol. 8,12 e83731. 26 Dec. 2013, doi:10.1371/journal.pone.0083731
+* Lévesque, Simon et al. “Campylobacteriosis in urban versus rural areas: a case-case study integrated with molecular typing to validate risk factors and to attribute sources of infection.” PloS one vol. 8,12 e83731. 26 Dec. 2013, doi:10.1371/journal.pone.0083731
 
 ***
 
@@ -567,14 +585,14 @@ Lévesque, Simon et al. “Campylobacteriosis in urban versus rural areas: a cas
 
 You are an epidemiologist working at the University of `r city_name`, and have been studying <i>Campylobacter</i> transmission dynamics for the past `r sample(2:10, size=1)` years. As such, you are very familiar with the relevant literature, including papers such as: 
 
-Bishop, H et al. “Bacteriological Survey of Fresh Minced Beef on Sale at Retail Outlets in Scotland in 2019: Three Foodborne Pathogens, Hygiene Process Indicators, and Phenotypic Antimicrobial Resistance.” Journal of food protection vol. 85,9 (2022): 1370-1379. 
+* Bishop, H et al. “Bacteriological Survey of Fresh Minced Beef on Sale at Retail Outlets in Scotland in 2019: Three Foodborne Pathogens, Hygiene Process Indicators, and Phenotypic Antimicrobial Resistance.” Journal of food protection vol. 85,9 (2022): 1370-1379. 
 
-Lopes, Bruno S et al. “Nationwide Stepwise Emergence and Evolution of Multidrug-Resistant Campylobacter jejuni Sequence Type 5136, United Kingdom.” Emerging infectious diseases vol. 25,7 (2019): 1320-1329. 
+* Lopes, Bruno S et al. “Nationwide Stepwise Emergence and Evolution of Multidrug-Resistant <i>Campylobacter jejuni</i> Sequence Type 5136, United Kingdom.” Emerging infectious diseases vol. 25,7 (2019): 1320-1329. 
 
-Sheppard, Samuel K et al. “Evolution of an agriculture-associated disease causing Campylobacter coli clade: evidence from national surveillance data in Scotland.” PloS one vol. 5,12 e15708. 15 Dec. 2010, doi:10.1371/journal.pone.0015708
+* Sheppard, Samuel K et al. “Evolution of an agriculture-associated disease causing <i>Campylobacter coli</i> clade: evidence from national surveillance data in Scotland.” PloS one vol. 5,12 e15708. 15 Dec. 2010, doi:10.1371/journal.pone.0015708
 
-Sheppard, Samuel K et al. “Campylobacter genotypes from food animals, environmental sources and clinical disease in Scotland 2005/6.” International journal of food microbiology vol. 134,1-2 (2009): 96-103.
+* Sheppard, Samuel K et al. “<i>Campylobacter</i> genotypes from food animals, environmental sources and clinical disease in Scotland 2005/6.” International journal of food microbiology vol. 134,1-2 (2009): 96-103.
 
-Dessouky, Yara El et al. “Genomic insights into zoonotic transmission and antimicrobial resistance in Campylobacter jejuni from farm to fork: a one health perspective.” Gut pathogens vol. 14,1 44. 5 Dec. 2022, doi:10.1186/s13099-022-00517-w
+* Dessouky, Yara El et al. “Genomic insights into zoonotic transmission and antimicrobial resistance in <i>Campylobacter jejuni</i> from farm to fork: a one health perspective.” Gut pathogens vol. 14,1 44. 5 Dec. 2022, doi:10.1186/s13099-022-00517-w
 
-Hadiyan, Maryam et al. “Prevalence, antimicrobial resistance, virulence gene profile and molecular typing of Campylobacter species isolated from poultry meat samples.” Veterinary medicine and science vol. 8,6 (2022): 2482-2493. 
+* Hadiyan, Maryam et al. “Prevalence, antimicrobial resistance, virulence gene profile and molecular typing of <i>Campylobacter</i> species isolated from poultry meat samples.” Veterinary medicine and science vol. 8,6 (2022): 2482-2493. 
