--- a/workshopE_2022.Rmd
+++ b/workshopE_2022.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'BM424 workshop: infectious disease outbreak control'
 author: "Morgan Feeney"
-date: "06/12/2022"
+date: "24/02/2023"
 output: 
   bookdown::html_document2:
     toc: true
@@ -41,15 +41,15 @@ Each member of your group will play one of the following roles as you attempt to
 7.	Public communications expert (past and current sci comm campaigns)
 8.  Doctor at a major surgery in `r city_name`
 
-You must work together, using the information that has been provided for you in the attached information packets, and decide what action(s) should be taken to control the measles outbreak currently plaguing your city, `r city_name`. Your actions should be evidence-based – use the peer-reviewed literature to decide on measures that will stop the pandemic in your scenario.
+You must work together, using the information that has been provided for you in the attached information packets, and decide what action(s) should be taken to control the outbreak currently plaguing your city, `r city_name`. Your actions should be evidence-based – use the peer-reviewed literature to decide on measures that will stop the pandemic in your scenario.
 
 Your action points may include directives to gather more information (e.g., contact tracing of current cases, microbiological testing of food/water, etc.), or specific directives (e.g. public health measures, non-pharmaceutical interventions, etc.). Use the data/expertise of all group members. Be clear, concise, and specific.
 
-You should submit 3-5 specific actions to control the pandemic, using the workshop 3 pro forma (available on MyPlace). Submit this by noon, Friday March 10th, via the submission link on MyPlace. 
+You should submit 3-5 specific actions to control the pandemic, using the [workshop 3 pro forma](/proformas/BM424_workshop3_proforma.docx) (also available on MyPlace). Submit this by noon, Friday March 10th, via the submission link on MyPlace. 
 
 ***
 
-## Information Packet X1
+## Information Packet E1
 
 You are the provost of `r city_name`, elected in `r sample(2012:2021, size=1)`. 
 
@@ -233,29 +233,44 @@ I have just learned that my `r sample(rel1, 1)` has passed away due to the new p
 
 ***
 
-As Provost of `r city_name`, you are of course familiar with the work of the [Standing Committee on Pandemic Preparedness](https://www.gov.scot/groups/standing-committee-on-pandemic-preparedness/), the [UK Pandemic Preparedness plan](https://www.gov.uk/government/publications/uk-pandemic-preparedness/uk-pandemic-preparedness), and the latest [COVID-19 health protection guidance](https://publichealthscotland.scot/our-areas-of-work/conditions-and-diseases/covid-19/covid-19-health-protection-guidance/#section-1) released by Public Health Scotland. 
+
+As Provost of `r city_name`, you are of course familiar with the work of the [Standing Committee on Pandemic Preparedness](https://www.gov.scot/groups/standing-committee-on-pandemic-preparedness/). You are also familiar with:
+
+* The [UK Pandemic Preparedness plan](https://www.gov.uk/government/publications/uk-pandemic-preparedness/uk-pandemic-preparedness)
+
+* The latest [COVID-19 health protection guidance](https://publichealthscotland.scot/our-areas-of-work/conditions-and-diseases/covid-19/covid-19-health-protection-guidance/#section-1) released by Public Health Scotland
+
+* [Tackling antimicrobial resistance 2019–2024: The UK’s five-year national action plan](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1070263/UK_AMR_5_year_national_action_plan.pdf)
+
+* The [UK One Health Report - Joint report on antibiotic use and antibiotic resistance, 2013–2017 ](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/921039/Ted_Final_version__1318703-v45-One_Health_Report_2019_FINAL-accessible.pdf)
+
+* [Communicating risk in public health emergencies: A WHO guideline for emergency risk communication (ERC) policy and practice](https://apps.who.int/iris/bitstream/handle/10665/259807/9789241550208-eng.pdf?sequence=2&isAllowed=y)
+
+
 
 ***
 
-## Information Packet X2
+## Information Packet E2
 
 You are a representative from Public Health Scotland, sent to `r city_name` to help with the <i>Listeria</i> outbreak. 
 
 Your briefing packet includes the following documents: 
 
-[name](link) or paper citation - x4 total
+* [Public Health Scotland - Listeria](https://www.hps.scot.nhs.uk/a-to-z-of-topics/listeria/)
 
+* [Food Standards Scotland - <i>Listeria monocytogenes</i>](https://www.foodstandards.gov.scot/consumers/food-safety/foodborne-illness/listeria-monocytogenes)
 
+* Macleod, Joshua et al. “An Exploration of <i>Listeria monocytogenes</i>, Its Influence on the UK Food Industry and Future Public Health Strategies.” Foods (Basel, Switzerland) vol. 11,10 1456. 17 May. 2022, doi:10.3390/foods11101456
 
-
+* Townsend, Anna et al. “A Systematic Review of <i>Listeria</i> Species and <i>Listeria monocytogenes</i> Prevalence, Persistence, and Diversity throughout the Fresh Produce Supply Chain.” Foods (Basel, Switzerland) vol. 10,6 1427. 20 Jun. 2021, doi:10.3390/foods10061427
 
 ***
 
-## Information Packet X3
+## Information Packet E3
 
-You are an epidemiologist working for Public Health Scotland, sent to `r city_name` to help with the measles outbreak.
+You are an epidemiologist working for Public Health Scotland, sent to `r city_name` to help with the <i>Listeria</i> outbreak.
 
-REPLACE THIS TEXT and TABLE - A team of scientists working together have in a PHS lab have isolated and cultured <i>Listeria</i> virus (using a standard tissue culture model) from a number of patient samples taken during this outbreak; isolated <i>Listeria</i> RNA from these cultures; reverse-transcribed this to DNA and sequenced this DNA using an Illumina MiSeq platform; assembled the short paired-end reads; and compared these assemblies to the extant <i>Listeria</i> sequences available in the NCBI databases. The results of these experiments are summarised in the table below. 
+A team of scientists working together have in a PHS lab have isolated and cultured <i>Listeria</i> (following standard procedures) from a number of patient samples taken during this outbreak; isolated DNA from these cultures; sequenced this DNA using an Illumina MiSeq platform; assembled the short paired-end reads; and compared these assemblies to the extant <i>Listeria</i> genome sequences available in the NCBI databases. The results of these experiments are summarised in the table below. 
 
 <table>
 <table border="1">
@@ -265,54 +280,59 @@ REPLACE THIS TEXT and TABLE - A team of scientists working together have in a PH
   </tr>
   <tr>
     <td>1</td>
-    <td>acc.no.here</td>
+    <td>GCA_015583955.1</td>
   </tr>
   <tr>
     <td>2</td>
-    <td>acc.no.here</td>
+    <td>GCA_022215545.1</td>
   </tr>
   <tr>
     <td>3</td>
-    <td>acc.no.here</td>
+    <td>GCA_015583955.1</td>
   </tr>
   <tr>
     <td>4</td>
-    <td>acc.no.here</td>
+    <td>GCA_015444825.1</td>
   </tr>
   <tr>
     <td>5</td>
-    <td>acc.no.here</td>
+    <td>GCA_015583955.1</td>
   </tr>
   <tr>
     <td>6</td>
-    <td>acc.no.here</td>
+    <td>GCA_015444945.1</td>
   </tr>
     <tr>
     <td>7</td>
-    <td>acc.no.here</td>
+    <td>GCA_015444945.1</td>
   </tr>
   <tr>
     <td>8</td>
-    <td>acc.no.here</td>
+    <td>GCA_015444945.1</td>
   </tr>
   <tr>
     <td>9</td>
-    <td>acc.no.here</td>
+    <td>GCA_015444945.1</td>
   </tr>
     <tr>
     <td>10</td>
-    <td>acc.no.here</td>
+    <td>GCA_015444825.1</td>
   </tr>
 </table>  
 <br><br>
 Your briefing packet also includes the following documents: 
 
+* [Public Health Scotland: Annual Summary of <i>Listeria</i> Infections](https://publichealthscotland.scot/publications/annual-summary-of-listeria-infections/annual-summary-of-listeria-infections-2019/)
 
-[text](link) x1, citation x1
+* McLAUCHLIN, J et al. “<i>Listeria monocytogenes</i> in Cooked Chicken: Detection of an Outbreak in the United Kingdom (2016 to 2017) and Analysis of L. monocytogenes from Unrelated Monitoring of Foods (2013 to 2017).” Journal of food protection vol. 83,12 (2020): 2041-2052.
+
+* Burnett, Elton et al. “Whole-Genome Sequencing Reveals Multiple Subpopulations of Dominant and Persistent Lineage I Isolates of <i>Listeria monocytogenes</i> in Two Meat Processing Facilities during 2011-2015.” Microorganisms vol. 10,5 1070. 23 May. 2022, doi:10.3390/microorganisms10051070
+
+* Félix, Benjamin et al. “A European-wide dataset to uncover adaptive traits of <i>Listeria monocytogenes</i> to diverse ecological niches.” Scientific data vol. 9,1 190. 28 Apr. 2022, doi:10.1038/s41597-022-01278-6
 
 ***
 
-## Information Packet X4
+## Information Packet E4
 
 You are the director of `r city_name`'s main hospital, the `r hospital_name`, which has 550 beds across 9 different wards and 10 operating theatres. 
 
@@ -420,15 +440,15 @@ The hospital follows the guidelines set out in the [National Infection Preventio
 
 As a hospital director, you are familiar with the literature surrounding hospital pandemic preparedness, and regularly read papers such as:
 
-Mer, Mervyn et al. “Critical Care Pandemic Preparation: Considerations and Lessons Learned from COVID-19.” Critical care clinics vol. 38,4 (2022): 761-774. 
+* Mer, Mervyn et al. “Critical Care Pandemic Preparation: Considerations and Lessons Learned from COVID-19.” Critical care clinics vol. 38,4 (2022): 761-774. 
 
-Tacconelli, Evelina et al. “Challenges of data sharing in European Covid-19 projects: A learning opportunity for advancing pandemic preparedness and response.” The Lancet regional health. Europe vol. 21 (2022): 100467. 
+* Tacconelli, Evelina et al. “Challenges of data sharing in European Covid-19 projects: A learning opportunity for advancing pandemic preparedness and response.” The Lancet regional health. Europe vol. 21 (2022): 100467. 
 
-Adelaja, I., Sayma, M., Walton, H., McLachlan, G., de Boisanger, J., Bartlett-Pestell, S., Roche, E., Gandhi, V., Wilson, G. J., Brookes, Z., Yeen Fung, C., Macfarlane, H., Navaratnam, A., James, C., Scolding, P., & Sara, H. (2020). A comprehensive hospital agile preparedness (CHAPs) tool for pandemic preparedness, based on the COVID-19 experience. Future healthcare journal, 7(2), 165–168. 
+* Adelaja, I., Sayma, M., Walton, H., McLachlan, G., de Boisanger, J., Bartlett-Pestell, S., Roche, E., Gandhi, V., Wilson, G. J., Brookes, Z., Yeen Fung, C., Macfarlane, H., Navaratnam, A., James, C., Scolding, P., & Sara, H. (2020). A comprehensive hospital agile preparedness (CHAPs) tool for pandemic preparedness, based on the COVID-19 experience. Future healthcare journal, 7(2), 165–168. 
 
 ***
 
-## Information Packet X5
+## Information Packet E5
 
 You are a civil servant working in `r city_name`, working closely with the provost, city council and various agencies including the NHS, the UK Health Security Agency (UKHSA), and the Scottish Environment Protection Agency (SEPA).  
 
@@ -482,52 +502,76 @@ Some of the key `r city_name` facts and figures at a glance are summarized in th
 
 Your briefing packet on <i>Listeria</i> includes the following information.
 
-[text](link) x4
+* [Listeria Information and Guidance (Food Standards Scotland)](https://www.foodstandards.gov.scot/downloads/Factsheet_-_Listeria_-_Website_-_for_businesses_and_professionals_-_May_2019.pdf)
 
+* Malley, Thomas J V et al. “Seek and destroy process: <i>Listeria monocytogenes</i> process controls in the ready-to-eat meat and poultry industry.” Journal of food protection vol. 78,2 (2015): 436-45.
 
+* EFSA Panel on Biological Hazards (BIOHAZ) et al. “The public health risk posed by <i>Listeria monocytogenes</i> in frozen fruit and vegetables including herbs, blanched during processing.” EFSA journal. European Food Safety Authority vol. 18,4 e06092. 20 Apr. 2020, doi:10.2903/j.efsa.2020.6092
+
+* Okpo, Emmanuel et al. “An outbreak of an unusual strain of <i>Listeria monocytogenes</i> infection in North-East Scotland.” Journal of infection and public health vol. 8,6 (2015): 612-8. doi:10.1016/j.jiph.2015.05.009
 
 ***
 
-## Information Packet X6
+## Information Packet E6
 
-EDIT/REPLACE AS NEEDED You are a microbiologist working in the virology department at the Greater `r city_name` Clinical Laboratory. Your laboratory is equipped to handle a range of culture samples (including anaerobic and microaerobic bacteria, as well as viruses), and you routinely process`r sample(1500:2000, size=1)` samples monthly. 
+You are a microbiologist working in the microbiology department at the Greater `r city_name` Clinical Laboratory. Your laboratory is equipped to handle a range of culture samples (including anaerobic and microaerobic bacteria, as well as viruses), and you routinely process`r sample(1500:2000, size=1)` samples monthly. 
 
-You are familiar with the culture requirements for growth of <i>Listeria monocytogenes</i> in tissue culture, and the range of [ testing methods](link).
+You are familiar with the culture requirements for growth of <i>Listeria monocytogenes</i>, and the [UK SMI for identification of <i>Listeria</i> species](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/889369/UK_SMI_ID_03i4.1.pdf).
 
 ```{r Listeria, echo=FALSE, fig.cap="Listeria monocytogenes colonies on blood agar. Image credit: [CDC](https://phil.cdc.gov/Details.aspx?pid=21009)"}
 knitr::include_graphics(rep("images/Listeria-BloodAgar.jpg"))
 ```
 
-3x citations or links
+You are also familiar with the literature surrounding <i>Listteria monocytogenes</i> identification, and often read papers such as:
+
+* Moura, Alexandra et al. “Whole genome-based population biology and epidemiological surveillance of <i>Listeria monocytogenes</i>.” Nature microbiology vol. 2 16185. 10 Oct. 2016, doi:10.1038/nmicrobiol.2016.185
+
+* Lucchini, R et al. “Molecular typing and genome sequencing allow the identification of persistent <i>Listeria monocytogenes</i> strains and the tracking of the contamination source in food environments.” International journal of food microbiology vol. 386 (2023): 110025. doi:10.1016/j.ijfoodmicro.2022.110025
+
+* Highmore, Callum J et al. “Viable-but-Nonculturable <i>Listeria monocytogenes</i> and Salmonella enterica Serovar Thompson Induced by Chlorine Stress Remain Infectious.” mBio vol. 9,2 e00540-18. 17 Apr. 2018, doi:10.1128/mBio.00540-18
+
+* Kalinin, Egor V et al. “Combination of growth conditions and InlB-specific dot-immunoassay for rapid detection of <i>Listeria monocytogenes</i> in raw milk.” Journal of dairy science, S0022-0302(23)00027-9. 27 Jan. 2023, doi:10.3168/jds.2022-21997
 
 ***
 
-## Information Packet X7
+## Information Packet E7
 
 You are a public communications expert, often employed by the `r city_name` city council to manage the PR response to different initiatives or crises. 
 
 As a public communications expert, you are familiar with the literature surrounding science communication in a pandemic, including papers such as: 
 
-Matta, G. Science communication as a preventative tool in the COVID19 pandemic. Humanit Soc Sci Commun 7, 159 (2020).
+* Matta, G. Science communication as a preventative tool in the COVID19 pandemic. Humanit Soc Sci Commun 7, 159 (2020).
 
-Abdool Karim, Salim S. “Public understanding of science: Communicating in the midst of a pandemic.” Public understanding of science (Bristol, England) vol. 31,3 (2022): 282-287.
+* Abdool Karim, Salim S. “Public understanding of science: Communicating in the midst of a pandemic.” Public understanding of science (Bristol, England) vol. 31,3 (2022): 282-287.
 
-Royan, Regina et al. “Use of Twitter Amplifiers by Medical Professionals to Combat Misinformation During the COVID-19 Pandemic.” Journal of medical Internet research vol. 24,7 e38324. 22 Jul. 2022, doi:10.2196/38324
+* Royan, Regina et al. “Use of Twitter Amplifiers by Medical Professionals to Combat Misinformation During the COVID-19 Pandemic.” Journal of medical Internet research vol. 24,7 e38324. 22 Jul. 2022, doi:10.2196/38324
 
-Tait, Margaret E et al. “Serving the public? A content analysis of COVID-19 public service announcements airing from March - December of 2020 in the U.S.” Preventive medicine reports vol. 29 (2022): 101971. 
+* Tait, Margaret E et al. “Serving the public? A content analysis of COVID-19 public service announcements airing from March - December of 2020 in the U.S.” Preventive medicine reports vol. 29 (2022): 101971. 
 
 You have assembled the following information/resources for this meeting:
 
-3x citations or links
+* [World Food Safety Day Campaign Materials](https://www.who.int/campaigns/world-food-safety-day/2022/campaign-materials)
+
+* Abbot, Jaclyn Maurer et al. “Development and evaluation of a university campus-based food safety media campaign for young adults.” Journal of food protection vol. 75,6 (2012): 1117-24. doi:10.4315/0362-028X.JFP-11-506
+
+* Sillence, Elizabeth et al. “Examining trust factors in online food risk information: The case of unpasteurized or 'raw' milk.” Appetite vol. 99 (2016): 200-210. doi:10.1016/j.appet.2016.01.010
 
 ***
 
-## Information Packet X8
+## Information Packet E8
 
 You are one of the doctors at the largest surgery in `r city_name`. In the past fortnight, `r sample(50:100, size=1)` of your patients have recently presented to the surgery with symptoms consistent with Listeriosis. You have therefore recently been familiarising yourself with the relevant literature:
 
-[text](link) x4
+* [BMJ Best Practice - Listeriosis](https://bestpractice.bmj.com/topics/en-gb/914)
 
-citations x3
+* [<i>Listeria</i> - Information for Health Professionals (CDC)](https://www.cdc.gov/listeria/technical.html)
 
+* [Central nervous system infections, antibacterial therapy (NICE)](https://bnf.nice.org.uk/treatment-summaries/central-nervous-system-infections-antibacterial-therapy/)
 
+* [Neonatal infection: antibiotics for prevention and treatment (NICE)](https://www.nice.org.uk/guidance/ng195/chapter/recommendations)
+
+* Khsim, Ijlas El Founti et al. “Listeriosis in pregnancy: An umbrella review of maternal exposure, treatment and neonatal complications.” BJOG : an international journal of obstetrics and gynaecology vol. 129,9 (2022): 1427-1433. doi:10.1111/1471-0528.17073
+
+* Dunphy, Louise et al. “Maternal sepsis caused by <i>Listeria monocytogenes</i> with a fatal fetal outcome.” BMJ case reports vol. 15,10 e249989. 3 Oct. 2022, doi:10.1136/bcr-2022-249989
+
+* Bokhari, Syed Faqeer Hussain et al. “Listerial Meningitis and Brain Abscess With Coexisting COVID-19 Infection in a Young, Immunocompetent Male: A Case Report.” Cureus vol. 14,9 e29455. 22 Sep. 2022, doi:10.7759/cureus.29455
